Update lein2 to lein in Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ cache:
 before_script:
   - "export JAVA_OPTS=-Xmx512m"
   - "echo $JAVA_OPTS"
-  - lein2 clean
+  - lein clean
 script:
-- lein2 eastwood
-- lein2 kibit
-- lein2 test
+- lein eastwood
+- lein kibit
+- lein test
 branches:
   only:
   - master
