--- a/opt/samples/digests/apple.json
+++ b/opt/samples/digests/apple.json
@@ -17,7 +17,9 @@
             "name" : "Lisa Malo",
             "user-id" : "d6e9-4529-8e7b"
           },
-          "published-at": "2017-11-5T17:00:48.729Z"
+          "published-at": "2017-11-5T17:00:48.729Z",
+          "comment-count": 0,
+          "comment-authors": []
         }, {
           "headline": "We've hit 2,000 paid subscribers!",
           "url": "http://localhost:3000/apple/general/post/e921-4f0c-9b9c",
@@ -26,7 +28,20 @@
             "name" : "David Smith",
             "user-id" : "d6e9-4529-8e7b"
           },
-          "published-at": "2017-11-5T17:00:48.729Z"
+          "published-at": "2017-11-5T17:00:48.729Z",
+          "comment-count": 2,
+          "comment-authors": [
+            {
+              "avatar-url" : "https://secure.gravatar.com/avatar/866a6350e399e67e749c6f2aef0b96c0.jpg?s=512&d=https%3A%2F%2Fa.slack-edge.com%2F7fa9%2Fimg%2Favatars%2Fava_0020-512.png",
+              "name" : "Tommy Wiseau",
+              "user-id" : "d6e9-4529-8e7b"
+            },
+            {
+              "avatar-url" : "https://secure.gravatar.com/avatar/866a6350e399e67e749c6f2aef0b96c0.jpg?s=512&d=https%3A%2F%2Fa.slack-edge.com%2F7fa9%2Fimg%2Favatars%2Fava_0020-512.png",
+              "name" : "Tommy Wiseau",
+              "user-id" : "d6e9-4529-8e7b"
+            }
+          ]
         }
       ]
     }, {
@@ -42,7 +57,9 @@
             "name" : "Lisa Malo",
             "user-id" : "d6e9-4529-8e7b"
           },
-          "published-at": "2017-11-5T17:00:48.729Z"
+          "published-at": "2017-11-5T17:00:48.729Z",
+          "comment-count": 0,
+          "comment-authors": []
         }, {
           "headline": "Versioning, Licensing and Sketch 4.0",
           "url": "http://localhost:3000/apple/design/post/e921-4f0c-9b9c",
@@ -51,7 +68,9 @@
             "name" : "David Smith",
             "user-id" : "d6e9-4529-8e7b"
           },
-          "published-at": "2017-11-5T17:00:48.729Z"
+          "published-at": "2017-11-5T17:00:48.729Z",
+          "comment-count": 0,
+          "comment-authors": []
         }
       ]
     }
