WIP: transactional emails

--- a/opt/samples/carrot-invites/apple.json
+++ b/opt/samples/carrot-invites/apple.json
@@ -3,8 +3,8 @@
   "reply-to": "tcook@apple.com",
   "email": "change@me.com",
   "org-name": "Apple",
-  "logo-url": "https://www.apple.com/ac/structured-data/images/knowledge_graph_logo.png",
-  "logo-width": 302,
-  "logo-height": 302,
+  "org-logo-url": "https://www.apple.com/ac/structured-data/images/knowledge_graph_logo.png",
+  "org-logo-width": 302,
+  "org-logo-height": 302,
   "token-link": "http://localhost:3000/invite?token=dd7c0bfe-2068-4de0-aa3c-4913eeeaa360"
 }
