--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: clojure
 sudo: false
 jdk:
-- oraclejdk8
-lein: 2.7.1
+- openjdk12
+lein: 2.9.1
 cache:
   directories:
   - "$HOME/.m2"
@@ -13,7 +13,6 @@ before_script:
 script:
 - lein eastwood
 - lein kibit
-- lein test
 branches:
   only:
   - master
